--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-numpy-2.3.5 
-pandas-2.3.3
-matplotlib-3.10.8
-seaborn-0.13.2
-statsmodels-0.14.6
-scikit-learn-1.8.0
+numpy
+pandas
+matplotlib
+seaborn
+statsmodels
+scikit-learn
+pyspark
+ipykernel
